--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "backend": "json-server --watch db/db.json"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
     "json-server": "^0.17.3",
